Fixed issue with menu category description not showing in storefront

--- a/main/views/themes/tastyigniter-orange/css/stylesheet.css
+++ b/main/views/themes/tastyigniter-orange/css/stylesheet.css
@@ -804,6 +804,9 @@ border: 0 none;
 color:#FFF;
 padding: 0 5px;
 }
+.menu-category > p {
+  font-size: 13px;
+}
 .menu-items {
   font-size: 12px;
 }
